--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,12 @@ body {
 
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(45deg, rgb(52 29 61) 0%, rgba(2,55,136) 100%);
+  /* background: linear-gradient(45deg, rgb(52 29 61) 0%, rgba(2,55,136) 100%); */
+  background: rgba(18,22,29);
   /* overflow: hidden; */
   padding: 0;
   margin: 0;
-  /* display: flex; */
+  /* display: flex; */  
   justify-content: center;
   align-items: center;
 }
